# julius

./: .editconfig  .editorconfig  .gitignore  00readme-DNN.txt  00readme-ja.txt  00readme.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  INSTALL.txt  LICENSE  LICENSE.txt  Makefile.in  README.md  Release-ja.txt  Release.txt  Sample.dnnconf  Sample.jconf  configure  configure.in  meson.build  meson_options.txt
adintool/: 00readme-ja.txt  00readme.txt  GUI_SDL2.txt  Makefile.gui.in  Makefile.in  README-GUI.txt  README.ja.md  README.md  aclocal.m4  adintool.c  adintool.h  configure  configure.in  mainloop.c  options.c
gramtools/: 00readme-ja.txt  00readme.txt  Makefile.in  configure  configure.in
gramtools/accept_check/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  accept_check.c
gramtools/dfa_determinize/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  dfa_determinize.c
gramtools/dfa_minimize/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  dfa_minimize.c
gramtools/generate/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  gen_next.c  gen_next.h  generate.c
gramtools/gram2sapixml/: 00readme-ja.txt  00readme.txt  Makefile.in  gram2sapixml.pl.in  gram2sapixml.txt
gramtools/mkdfa/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  mkdfa.pl.in  mkdfa.py
gramtools/mkdfa/mkfa-1.44-flex/: Makefile.in  dfa.c  dfa.h  gram.l  gram.tab.c  gram.y  lex.yy.c  main.c  mkfa.h  nfa.c  nfa.h  triplet.c  triplet.h  voca.c
gramtools/nextword/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  common.h  get_next.c  nextword.c  nextword.h  rdterm.c  readline.c  wtoken.c
gramtools/yomi2voca/: Makefile.in  README.md  yomi2voca.pl.in
jcontrol/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  configure  configure.in  japi.h  japi_grammar.c  japi_misc.c  japi_process.c  jcontrol.c  server.c
julius/: 00readme-ja.txt  00readme.txt  Audio.md  Makefile.in  Normalize.md  Options.md  README.md  Spec.md  VAD.md  aclocal.m4  app.h  charconv.c  charconv.h  charconv_iconv.c  charconv_libjcode.c  charconv_win32.c  config.h.in  configure  configure.in  main.c  meson.build  meson_options.txt  module.c  output_file.c  output_module.c  output_stdout.c  recogloop.c  record.c  visual.c
julius/libjcode/: Makefile.in  README  detect.c  jlib.h  jlibconfig.h  libjcode.c  sample.c
julius/libjcode/Doc/: rfc1468.txt  rfc1554.txt
julius/subprojects/: libjulius  libsent
libjulius/: 00readme-jconf.txt  Makefile.in  aclocal.m4  configure  configure.in  doxygen.conf.ver.in  julius.pc.in  libjulius-config-dist.in  libjulius-config.in  meson.build  meson_options.txt
libjulius/include/julius/: acconfig.h  beam.h  callback.h  config-android-libjulius.h  config-ios-libjulius.h  config-msvc-libjulius.h  config.h.in  define.h  extern.h  global.h  graph.h  jconf.h  jfunc.h  julius.h  juliuslib.h  misc.h  multi-gram.h  plugin.h  recog.h  search.h  trellis.h  useropt.h  wchmm.h
libjulius/libfvad/: README.md
libjulius/libfvad/libfvad/: .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac  libfvad.pc.in
libjulius/src/: adin-cut.c  backtrellis.c  beam.c  callback.c  confnet.c  default.c  dfa_decode.c  factoring_sub.c  gmm.c  gramlist.c  graphout.c  hmm_check.c  instance.c  jfunc.c  m_adin.c  m_chkparam.c  m_fusion.c  m_info.c  m_jconf.c  m_options.c  m_usage.c  mbr.c  multi-gram.c  ngram_decode.c  outprob_style.c  pass1.c  plugin.c  realtime-1stpass.c  recogmain.c  search_bestfirst_main.c  search_bestfirst_v1.c  search_bestfirst_v2.c  spsegment.c  useropt.c  version.c  version.c.in  wav2mfcc.c  wchmm.c  wchmm_check.c  word_align.c
libsent/: Makefile.in  acconfig.h  configure  configure.in  libsent-config-dist.in  libsent-config.in  meson.build  meson_options.txt  sent.pc.in
libsent/include/sent/: adin.h  config-android-libsent.h  config-ios-libsent.h  config-msvc-libsent.h  config.h.in  dfa.h  dnn.h  hmm.h  hmm_calc.h  htk_defs.h  htk_hmm.h  htk_param.h  machines.h  mfcc.h  ngram2.h  ptree.h  speech.h  stddefs.h  tcpip.h  util.h  vocabulary.h
libsent/src/adin/: adin_esd.c  adin_file.c  adin_mic_darwin_coreaudio.c  adin_mic_freebsd.c  adin_mic_linux.c  adin_mic_linux_alsa.c  adin_mic_linux_oss.c  adin_mic_o2.c  adin_mic_sol2.c  adin_mic_sp.c  adin_mic_sun4.c  adin_na.c  adin_netaudio.c  adin_portaudio.c  adin_pulseaudio.c  adin_sndfile.c  adin_tcpip.c  ds48to16.c  lpfcoef_2to1.h  lpfcoef_3to4.h  zc-e.c  zmean.c
libsent/src/anlz/: param_malloc.c  paramselect.c  paramtypes.c  rdparam.c  strip.c  strip_mfcc.c  vecin_net.c  wrsamp.c  wrwav.c
libsent/src/dfa/: cpair.c  dfa_lookup.c  dfa_malloc.c  dfa_util.c  init_dfa.c  mkcpair.c  mkterminfo.c  rddfa.c
libsent/src/hmminfo/: cdhmm.c  cdset.c  check_hmm_restriction.c  check_hmmtype.c  chkhmmlist.c  guess_cdHMM.c  hmm_lookup.c  init_phmm.c  put_htkdata_info.c  rdhmmdef.c  rdhmmdef_data.c  rdhmmdef_dens.c  rdhmmdef_mpdf.c  rdhmmdef_options.c  rdhmmdef_regtree.c  rdhmmdef_state.c  rdhmmdef_streamweight.c  rdhmmdef_tiedmix.c  rdhmmdef_trans.c  rdhmmdef_var.c  rdhmmlist.c  read_binhmm.c  read_binhmmlist.c  write_binhmm.c  write_binhmmlist.c
libsent/src/net/: rdwt.c  server-client.c
libsent/src/ngram/: init_ngram.c  ngram_access.c  ngram_compact_context.c  ngram_lookup.c  ngram_malloc.c  ngram_read_arpa.c  ngram_read_bin.c  ngram_util.c  ngram_write_arpa.c  ngram_write_bin.c
libsent/src/phmm/: addlog.c  calc_dnn.c  calc_dnn_avx.c  calc_dnn_cuda.cu  calc_dnn_fma.c  calc_dnn_neon.c  calc_dnn_neonv2.c  calc_dnn_sse.c  calc_mix.c  calc_tied_mix.c  gms.c  gms_gprune.c  gprune_beam.c  gprune_common.c  gprune_heu.c  gprune_none.c  gprune_safe.c  mkwhmm.c  outprob.c  outprob_dnn.c  outprob_init.c  vsegment.c
libsent/src/util/: aptree.c  confout.c  endian.c  gzfile.c  jlog.c  mybmalloc.c  mymalloc.c  mystrtok.c  ptree.c  qsort.c  readfile.c  strcasecmp.c
mkbingram/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  charconv.c  charconv.h  config.h.in  configure  configure.in  mkbingram.c
mkgshmm/: 00readme-ja.txt  00readme.txt  Makefile.in  README.md  configure  configure.in  mkgshmm.in
(+296 files in other folders)
