dnl Copyright (c) 2002-2016 Kawahara Lab., Kyoto University
dnl Copyright (c) 2002-2005 Shikano Lab., Nara Institute of Science and Technology
dnl Copyright (c) 2005-2016 Julius project team, Nagoya Institute of Technology
dnl All rights reserved
dnl
AC_INIT(adintool.c)
AC_CONFIG_AUX_DIR(../support)

AC_ARG_ENABLE(gui,
[  --disable-gui      do not compile gui version, which requires SDL2],
want_gui=$enableval
,want_gui=yes)
AC_ARG_ENABLE(sdl,
[  --disable-sdl      do not compile gui version, which requires SDL2],
want_gui=$enableval
,want_gui=yes)
AC_ARG_ENABLE(sdlmain,
[  --disable-sdlmain  do not use SDL main function],
want_sdlmain=$enableval
,want_sdlmain=yes)

AC_CANONICAL_HOST
AC_MSG_CHECKING([host-specific optimization flag])
if test -z "$CFLAGS" ; then
    OPTFLAG=../support/cflags.${host_cpu}-${host_vendor}-${host_os}
    if test -f "$OPTFLAG" ; then
	. $OPTFLAG
	AC_MSG_RESULT([$OPTFLAG])
    else
	AC_MSG_RESULT([no])
    fi
else
    AC_MSG_RESULT([skipped])
fi
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PATH_PROG(RM,rm)
AC_EXEEXT
extra_target=""
if test "$want_gui" = yes; then
   AM_PATH_SDL2(2.0.0, extra_target="adintool-gui")
fi
AC_SUBST(extra_target)
AC_OUTPUT(Makefile)
