option('disable-pthread', type:'boolean', value:false, description:'[debug] do not use pthread for speech input')
option('setup', type:'combo', choices:['standard', 'fast', 'v2.1'], value:'fast', description:'select algorithm set')
option('factor1', type:'boolean', value:false, description:'use 1-gram factoring on 1st pass')
option('factor2', type:'boolean', value:false, description:'use 2-gral factoring on 1st pass')
option('lowmem', type:'boolean', value:false, description:'all words share a single root on lexicon tree')
option('lowmem2', type:'boolean', value:false, description:'separate hi-freq words from lexicon tree')
option('monotree', type:'boolean', value:false, description:'monophone lexicon on 1st pass (EXPERIMENTAL)')
option('disable-score-beam', type:'boolean', value:false, description:'enable score envelope beaming on 2nd pass scan')
option('iwcd1', type: 'boolean', value:false, description:'handle inter-word triphone on 1st pass')
option('strict-iwcd2', type:'boolean', value:false, description:'strict IWCD scoring on 2nd pass')
option('wpair', type:'boolean', value:false, description:'use word-pair approximation on 1st pass')
option('wpair-nlimit', type:'boolean', value:false, description:'keep only N-best path with wpair')
option('word-graph', type: 'boolean', value:false, description:'use word graph instead of trellis between passes')
option('disable-cm', type:'boolean', value:false, description:'disable confidence measure computation', value:false)
option('cm-nbest', type:'boolean', value:false, description:'use N-best CM instead of search CM', value:false)
option('cm-multiple-alpha', type: 'boolean', description:'EXPERIMENTAL: test multi alphas (need much mem)', value:false)
option('lmfix', type:'boolean', value:false, description:'make LM computing compatible with < 3.4')
option('graphout-nbest', type:'boolean', value:false, description:'word graph output from N-best sentence', value:false)
option('cmthres', type:'boolean', value:false, description:'enable confidence score based pruning on 2nd pass', value:false)
option('gmm-vad', type:'boolean', value:false, description:'enable GMM-based VAD (EXPERIMENTAL)', value:false)
option('decoder-vad', type:'boolean', value:false, description:'enable a new decoder-based VAD by NAIST team', value:false)
option('power-reject', type:'boolean', value:false, description:'enable post rejection by power', value:false)
option('disable-plugin', type:'boolean', value:false, description:'disable plugin support', value:false)
option('disable-libfvad', type:'boolean', value:false, description:'disable libfvad library', value:false)


